# Blackcat_Disk-Scan

./: .gitignore  CMakeLists.txt  README.md  blackcat_Disk_Scanner.spec  build.bat  build_msvc.bat  disk_scan.py
src/: admin.c  admin.h  app.rc  disk.c  disk.h  eventlog.c  eventlog.h  i18n.c  i18n.h  main.c  pdf.c  pdf.h  ui.c  ui.h  utils.c  utils.h
